<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fragmentstyle.BluetoothFragment">

    <LinearLayout
        android:id="@+id/bluetooth_unconnected_container"
        android:layout_margin="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/bluetooth_connect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_scan"/>

        <TextView
            android:id="@+id/bluetooth_paired_device_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/title"
            android:text="@string/bluetooth_paired_device_list_title" />

        <ListView
            android:id="@+id/bluetooth_paired_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bluetooth_discovered_device_list_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/title"
            android:text="@string/bluetooth_discovered_device_list_title" />

        <ListView
            android:id="@+id/bluetooth_discovered_device_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bluetooth_connected_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/bluetooth_disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_disconnect"/>

        <TextView
            android:id="@+id/bluetooth_connected_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"/>

        <LinearLayout
            android:id="@+id/bluetooth_send_message_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bluetooth_message"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <Button
                android:id="@+id/send_bluetooth_message_button"
                android:text="@string/bluetooth_send_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bluetooth_messages_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bluetooth_messages_title"
                android:layout_marginVertical="@dimen/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                android:text="@string/bluetooth_messages_title"/>

            <ListView
                android:id="@+id/bluetooth_messages"
                android:transcriptMode="alwaysScroll"
                android:stackFromBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
