<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_dialog_title"
        android:layout_marginLeft="@dimen/margin_dialog_title"
        android:layout_marginStart="@dimen/margin_dialog_title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@android:color/primary_text_light"
        android:text="@string/arena_waypoint_coords"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin_dialog_contents"
            android:layout_marginStart="@dimen/margin_dialog_contents"
            android:hint="@string/arena_waypoint_x">

            <EditText
                android:id="@+id/waypoint_x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arena_waypoint_x"
                android:inputType="number"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/waypoint_y"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin_dialog_contents"
            android:layout_marginEnd="@dimen/margin_dialog_contents"
            android:hint="@string/arena_waypoint_y">

            <EditText
                android:id="@+id/waypoint_y"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arena_waypoint_y"
                android:inputType="number"
                android:maxLength="2"
                android:imeOptions="actionGo"
                android:nextFocusForward="@id/waypoint_x"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</LinearLayout>